--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,16 +1,4 @@
 /*
-## Variables ##
-*/
-:root {
-    --color-primary: #d73953;
-    --color-black: #090909;
-    --color-white: #ffffff;
-    --color-light-grey: #f3f3f3;
-    --color-dark-grey: #353535;
-    --text-color: #000000; 
-}
-
-/*
 ## Rules ##
 */
 
@@ -36,4 +24,16 @@ a {
 
 .section-tagline {
     color: var(--color-primary);
+}
+
+/*
+## Variables ##
+*/
+:root {
+    --color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black); 
 }
