--- a/0x02-CSS_advanced/styles/2-style.css
+++ b/0x02-CSS_advanced/styles/2-style.css
@@ -1,4 +1,15 @@
 /*
+2. Do you know your color values?
+
+Based on styles/1-style.css, create the following declarations:
+- For the body, set the foreground color value to #161616
+- For all anchor elements, set the foreground color value to #161616
+- All elements with the class visually-hidden should have their display to none
+- All elements with the class card-category, should have their foreground color set to #D73953
+- All elements with the class section-tagline should have their foreground color set to #D73953
+*/
+
+/*
 ## Rules ##
 */
 
