--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -1,17 +1,15 @@
 
 /* 
-4. Variables for storing certain font types
+5. Variables for the font size
 
-Based on styles/3-style.css:
-
-Targeting the root element, create the custom font-family properties font-family-base and font-family-title:
-- set the first choice font as Helvetica Neue
-- set the second choice font as Helvetica
-- set the third choice font as Arial
-- set the last choice font as sans-serif
-- Set body‘s font-family to font-family-base
-Create a new declaration targeting all 6 levels of section headings, positioned before the links declaration
-set its font-family to font-family-title
+Targeting the root selector, create the following custom properties:
+- font-size-small set to 1.2rem
+- font-size-medium set to 1.6rem
+- font-size-large set to 1.8rem
+- font-size-x-large set to 2.3rem
+- font-size-xx-large set to 4.8rem
+All fonts in the html element should be at 62.5% of their normal size
+Any fonts in the body should have their sizes set to font-size-medium
 */ 
 
 /*
