--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -1,10 +1,10 @@
 
 /* 
-14. Resetting the CSS stylesheet for browser consistency
+15. Add universal box-sizing
 
-Based on styles/13-style.css:
+Based on styles/14-style.css:
 
-Normalize your CSS file using necolas’ normalize.css with this version.
+Just before the styling for html, add a universal box sizing rule
 */ 
 
 /*
