--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -150,7 +150,7 @@ a:active {
         padding: 0.5rem 1rem;
     }
 
-    nav .nav-link:hover {
+    .nav .nav-link:hover {
         color: var(--nav-item-link-hover);
     }
 
