--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -76,8 +76,7 @@ ul.row {
 
 [class|=col-] {
     float: left;
-    padding: 0.5rem;
-
+    padding: 0.5rem, 0.5rem, 0.5rem, 0.5rem;
 }
 
 .visually-hidden {
