--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -74,9 +74,9 @@ ul.row {
     width: 50%;
 }
 
-[class|=col-] {
+[class^=col-] {
     float: left;
-    padding: 0.5rem, 0.5rem, 0.5rem, 0.5rem;
+    padding: 0.5rem;
 }
 
 .visually-hidden {
