--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -1,12 +1,13 @@
 
 /* 
-20. Clear the context of the grid 
-Based on styles/19-style.css:
+21. Simplify the col- selector 
+Based on styles/20-style.css:
 
-Write a CSS rule that creates a new row after each instance of the class row with the following properties:
-- no content
-- displayed as a table
-- do not allow any floating elements on either side
+Select all classes that start with col-
+- float them to the left
+- set their padding to half of the root element
+- Hint: be mindful of specificity
+Remove references to these common properties for the individual col-1-3 and col-1-2 classes
 
 /*
 ## Rules ##
