--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -243,7 +243,7 @@ ul.row {
         color: var(--nav-item-link-hover);
     }
 
-nav .nav-link::before {
+.nav .nav-link::before {
     content: "";
     position: absolute;
     top: 0;
@@ -255,7 +255,7 @@ nav .nav-link::before {
 
 .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
-    width: 100px;
+    width: 100%;
 }
 .navbar-menu {
     float: right;
