--- a/0x03-sass_scss/100-loop_col.scss
+++ b/0x03-sass_scss/100-loop_col.scss
@@ -2,10 +2,10 @@
 13. Columns and operators
 
 Write a Sass file that creates classes with different width:
-- col-1 with width equals to 100%
-- col-2 with width equals to 50%
-- col-3 with width equals to 33.3333333333%
-- col-4 with width equals to 25%
+- col-1 with width equals to 100{percentage}
+- col-2 with width equals to 50{percentage}
+- col-3 with width equals to 33.3333333333{percentage}
+- col-4 with width equals to 25{percentage}
 - You must create .col-* class from 1 to 4
 - You must use a @for statement
 */
