--- a/0x03-sass_scss/103-sort_strings.scss
+++ b/0x03-sass_scss/103-sort_strings.scss
@@ -10,31 +10,57 @@ the debug output.
 // value doesn't override the variable if it was already declared.
 $default-sort-order: a b c d e f g h i j k l m n o p q r s t u v w x y z !default;
 
+// Compares two string to determine which comes first
+/// @param {String} $string-a - first string
+/// @param {String} $string-b - second string
+/// @param {List} $order - default sort order
+/// @return {Bool} // True
+                        // If $string-a is first in alphabethical order
+                        //                  or
+                        // if $string-a is more short, because all comparation of letters was same
+                   // False
+                        // If $string-a is not first in alphabethical order
+                        //                  or
+                        // if $string-a is not more short, because all comparation of letters was same
+
+
+
+//                     Astring    Bstring           
 @function str-compare($string-a, $string-b, $order: $default-sort-order) {
-    // Cast values to strings
-    $string-a: to-lower-case($string-a + unquote(""));
-    $string-b: to-lower-case($string-b + unquote(""));      
+    // Cast values strings to lowercase to normalize data
+    $string-a: to-lower-case($string-a); //=> astring
+    $string-b: to-lower-case($string-b); //=> bstring     
   
     // Loop through and compare the characters of each string...
-    @for $i from 1 through min(str-length($string-a), str-length($string-b)) {
+    //                                              (7) => minimum value                        
+    @for $i from 1 through min(str-length($string-a), str-length($string-b)) { //= @for $i from 1 through 7
   
       // Extract a character from each string
-      $char-a: str-slice($string-a, $i, $i);
-      $char-b: str-slice($string-b, $i, $i);
+      // str-slice(string, start, end):
+      // Extracts characters from string; start at 'start' and end at 'end', and returns the slice.
+      // !¡ In Sass, the first character in a string is at index 1, not 0.
+      $char-a: str-slice($string-a, $i, $i); //=> str-slice(astring, 1, 1) => a
+      $char-b: str-slice($string-b, $i, $i); //=> str-slice(bstring, 1, 1) => b
       
-      // If characters exist in $order list and are different
-      // return true if first comes before second
-      @if $char-a and $char-b and index($order, $char-a) != index($order, $char-b) {
-        @return index($order, $char-a) < index($order, $char-b);
+      // Compare character of $string-a and $string-b
+      // if char-a exist and char-b exist and the index in list $default-sort-order is different for $char-a and $char-b
+      @if $char-a and $char-b and index($order, $char-a) != index($order, $char-b) { //=> @if a and b and 1 != 2
+        @return index($order, $char-a) < index($order, $char-b); //=> @return 1 < 2; => True
       }
     }
     
     // In case they are equal after all characters in one string are compared,
     // return the shortest first
     @return str-length($string-a) < str-length($string-b);
-  }
+}
 
-  @function swap($list, $index-a, $index-b) {
+/// Swaps values at indexes `$a` and `$b` from `$list`
+/// @param {List} $list - list to update
+/// @param {Number} $a - index of first element
+/// @param {Number} $b - index of second element
+/// @return {List}
+
+@function swap($list, $index-a, $index-b) {
     @if abs($index-a) > length($list) or abs($index-b) > length($list) {
       @return $list;
     }
@@ -42,19 +68,15 @@ $default-sort-order: a b c d e f g h i j k l m n o p q r s t u v w x y z !defaul
     $list: set-nth($list, $index-a, nth($list, $index-b));
     $list: set-nth($list, $index-b, $tmp);
     @return $list;
-  }
+}
 
-  @function sort($list, $order: $default-sort-order) {
+@function sort($list, $order: $default-sort-order) {
 
     // Cycle through each item in the list
     @for $i from 1 through length($list) {
-  
-      // Compare the item with the previous items in the list
-      @for $j from $i * -1 through -1 {
-  
-        // abs() trick to loop backward
-        $j: abs($j);
-  
+        
+      @for $j from $i through 1 {
+
         // Compare both values
         @if $j > 1 and str-compare(nth($list, $j), nth($list, $j - 1), $order) {
           // If the item should go before the other, swap them
@@ -65,6 +87,6 @@ $default-sort-order: a b c d e f g h i j k l m n o p q r s t u v w x y z !defaul
   
     // Return the sorted list
     @return $list;
-  }
+}
 
   @debug sort($list_to_sort)
